# Price-aggregator-comparison-app

./: .coverage  .gitignore  ARCHITECTURE.md  Architecture.md  CONTRIBUTING.md  README.md  Reflection  Reflection.md  SPECIFICATION.md  SRD.md  Specification.md  Stakeholder Analysis.md  Test Case Development  Use Case Diagrams  Use Case Diagrams.md  Use Case Specifications.md  build.sbt  changelog.md  license.md  main.src  notes.md  pyproject.toml  requirements.txt  roadmap.md  setup.py  test_scrapers.py  workload.yaml
Tests/: test_price_alert.py  test_product.py  test_promotion.py  test_retailer.py  test_saved_list.py  test_user.py
docs/: Activity Diagrams.md  Backlog.md  Kanban Board Creation.md  Object State Modeling and Activity Workflow Modeling.md  Reflection  State Transition Diagrams.md  kanban_board.md  kanban_explanation.md  protection.md  template_analysis.md  voting_results.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_05c54c49260f7af4___init___py.html  z_05c54c49260f7af4_test_abstract_factory_py.html  z_05c54c49260f7af4_test_builder_py.html  z_05c54c49260f7af4_test_factory_method_py.html  z_05c54c49260f7af4_test_prototype_py.html  z_05c54c49260f7af4_test_simple_factory_py.html  z_05c54c49260f7af4_test_singleton_py.html  z_08b4cb1648a15a99___init___py.html  z_08b4cb1648a15a99_test_price_alert_py.html  z_08b4cb1648a15a99_test_product_py.html  z_08b4cb1648a15a99_test_promotion_py.html  z_08b4cb1648a15a99_test_retailer_py.html  z_08b4cb1648a15a99_test_saved_list_py.html  z_08b4cb1648a15a99_test_user_py.html  (+27 more)
src/: README.md  (+8 more)
(+168 files in other folders)
